--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxt/eslint": "1.13.0",
+    "vue3-google-map": "^0.24.1",
     "eslint": "^9.39.2",
     "nuxt": "^4.3.0",
     "vue": "^3.5.27",
