feat: ui implement tailwind structure

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,13 @@
 {
   // https://nuxt.com/docs/guide/concepts/typescript
   "files": [],
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "~~/*": ["./*"],
+      "@core/*": ["./*"]
+    }
+  },
   "references": [
     {
       "path": "./.nuxt/tsconfig.app.json"
