--- a/package.json
+++ b/package.json
@@ -7,14 +7,39 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write \"**/*.{js,ts,vue,json,md}\""
   },
   "dependencies": {
+    "@iconify/vue": "^5.0.0",
     "@nuxt/eslint": "1.13.0",
-    "vue3-google-map": "^0.24.1",
+    "@vee-validate/zod": "^4.15.1",
+    "bcryptjs": "^3.0.3",
+    "bullmq": "^5.67.2",
     "eslint": "^9.39.2",
+    "h3": "2.0.1-rc.11",
+    "ioredis": "^5.9.2",
+    "jose": "^6.1.3",
+    "mongodb": "^7.0.0",
     "nuxt": "^4.3.0",
+    "vee-validate": "^4.15.1",
     "vue": "^3.5.27",
-    "vue-router": "^4.6.4"
+    "vue-router": "^4.6.4",
+    "vue3-google-map": "^0.24.1",
+    "zod": "^4.3.6"
+  },
+  "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.14.0",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@tailwindcss/vite": "^4.1.18",
+    "@typescript-eslint/eslint-plugin": "^8.54.0",
+    "@typescript-eslint/parser": "^8.54.0",
+    "autoprefixer": "^10.4.24",
+    "postcss": "^8.5.6",
+    "prettier": "^3.8.1",
+    "tailwindcss": "^4.1.18",
+    "tsx": "^4.21.0"
   }
 }
