feat: refactor Maps.vue to use new clients API and improve client loading logic
- Removed localStorage client management and integrated API calls for fetching clients.
- Added new API endpoints for client management (GET, POST, PATCH, DELETE).
- Implemented geocoding with caching for address resolution.
- Updated map settings based on fetched client data.
- Enhanced client visit handling with API integration.
- Removed mock data file for commercial points.
- Added new SVG asset for agent cover.
- Updated Nuxt configuration for environment variables and ESLint module.
- Improved MongoDB connection handling and geocoding utility functions.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
+    "import:aco-e-ouro": "tsx scripts/import_aco_e_ouro.ts",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write \"**/*.{js,ts,vue,json,md}\""
@@ -41,5 +42,17 @@
     "prettier": "^3.8.1",
     "tailwindcss": "^4.1.18",
     "tsx": "^4.21.0"
+  },
+  "pnpm": {
+    "overrides": {
+      "unicorn-magic": "0.4.0"
+    },
+    "onlyBuiltDependencies": [
+      "@parcel/watcher",
+      "esbuild",
+      "lightningcss",
+      "msgpackr-extract",
+      "unrs-resolver"
+    ]
   }
 }
