--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
   "dependencies": {
     "@iconify/vue": "^5.0.0",
     "@vee-validate/zod": "^4.15.1",
-    "vee-validate": "^4.15.1",
     "bcryptjs": "^3.0.3",
     "bullmq": "^5.27.0",
+    "csv-parse": "^6.1.0",
     "h3": "1.15.5",
     "ioredis": "^5.9.2",
     "jose": "^6.1.3",
     "mongodb": "^7.0.0",
     "nuxt": "^4.2.2",
+    "vee-validate": "^4.15.1",
     "vue": "^3.5.27",
     "vue-router": "^4.6.4",
     "vue3-google-map": "^0.24.1",
@@ -39,8 +40,8 @@
     "@tailwindcss/vite": "^4.1.18",
     "@typescript-eslint/eslint-plugin": "^8.54.0",
     "@typescript-eslint/parser": "^8.54.0",
-    "eslint": "^9.39.2",
     "autoprefixer": "^10.4.24",
+    "eslint": "^9.39.2",
     "postcss": "^8.5.6",
     "prettier": "^3.8.1",
     "tailwindcss": "^4.1.18",
