--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jose": "^6.1.3",
     "mongodb": "^7.0.0",
     "nuxt": "^4.2.2",
+    "pdfjs-dist": "^4.9.155",
     "vee-validate": "^4.15.1",
     "vue": "^3.5.27",
     "vue-router": "^4.6.4",
