feat: add awesome API key configuration and update gold price fetching logic

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,4 @@
 NUXT_PUBLIC_GOOGLE_MAPS_API_KEY=#
 NUXT_MONGO_URI=mongodb://localhost:27017/?authSource=admin
 NUXT_MONGO_DB_NAME=representations
-
+NUXT_AWESOME_API_KEY=
